[gd_scene load_steps=10 format=2]

[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/LevelCardtridge/MusicEnjoy/VU Pillar1.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/LevelCardtridge/MusicEnjoy/MusicRoom2D.gd" type="Script" id=2]
[ext_resource path="res://font/Built/Ubuntu_B_72.tres" type="DynamicFont" id=3]
[ext_resource path="res://font/Built/Ubuntu_M_48tred.tres" type="DynamicFont" id=4]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/LevelCardtridge/MusicEnjoy/Crackle.tscn" type="PackedScene" id=5]
[ext_resource path="res://font/Built/Ubuntu_M_28tred.tres" type="DynamicFont" id=6]
[ext_resource path="res://Audio/Floaters.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 37.7963, 816.715 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1270.32, 95.3083 )

[node name="MusicRoom2D" type="Node2D"]
script = ExtResource( 2 )
FileAudio = ExtResource( 7 )

[node name="Walls" type="Node2D" parent="."]

[node name="Wall" type="RigidBody2D" parent="Walls"]
position = Vector2( -37.0902, 0 )
mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall"]
position = Vector2( 0, 562.104 )
shape = SubResource( 1 )

[node name="Wall2" type="RigidBody2D" parent="Walls"]
position = Vector2( 1953.42, -3.09094 )
mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall2"]
position = Vector2( 0, 562.104 )
shape = SubResource( 1 )

[node name="Roof" type="RigidBody2D" parent="Walls"]
position = Vector2( 969.907, -273.672 )
mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Roof"]
shape = SubResource( 2 )

[node name="SpectrumPillars" type="Node2D" parent="."]
position = Vector2( 0, 1081.21 )

[node name="VU Pillar1" parent="SpectrumPillars" instance=ExtResource( 1 )]

[node name="VU Pillar2" parent="SpectrumPillars" instance=ExtResource( 1 )]
position = Vector2( 188.151, 0 )

[node name="VU Pillar3" parent="SpectrumPillars" instance=ExtResource( 1 )]
position = Vector2( 302.102, 0 )

[node name="VU Pillar4" parent="SpectrumPillars" instance=ExtResource( 1 )]
position = Vector2( 418.703, 0 )

[node name="VU Pillar5" parent="SpectrumPillars" instance=ExtResource( 1 )]
position = Vector2( 532.654, 0 )

[node name="VU Pillar6" parent="SpectrumPillars" instance=ExtResource( 1 )]
position = Vector2( 646.605, 0 )

[node name="VU Pillar7" parent="SpectrumPillars" instance=ExtResource( 1 )]
position = Vector2( 752.606, 0 )

[node name="VU Pillar8" parent="SpectrumPillars" instance=ExtResource( 1 )]
position = Vector2( 863.907, 0 )

[node name="VU Pillar9" parent="SpectrumPillars" instance=ExtResource( 1 )]
position = Vector2( 969.907, 0 )

[node name="VU Pillar10" parent="SpectrumPillars" instance=ExtResource( 1 )]
position = Vector2( 1081.21, 0 )

[node name="VU Pillar11" parent="SpectrumPillars" instance=ExtResource( 1 )]
position = Vector2( 1219.01, 0 )

[node name="VU Pillar12" parent="SpectrumPillars" instance=ExtResource( 1 )]
position = Vector2( 1330.31, 0 )

[node name="VU Pillar13" parent="SpectrumPillars" instance=ExtResource( 1 )]
position = Vector2( 1438.96, 0 )

[node name="VU Pillar14" parent="SpectrumPillars" instance=ExtResource( 1 )]
position = Vector2( 1560.86, 0 )

[node name="VU Pillar15" parent="SpectrumPillars" instance=ExtResource( 1 )]
position = Vector2( 1685.41, 0 )

[node name="VU Pillar16" parent="SpectrumPillars" instance=ExtResource( 1 )]
position = Vector2( 1833.81, 0 )

[node name="MusicController" type="CanvasLayer" parent="."]
layer = 2

[node name="MusicUI" type="Control" parent="MusicController"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 103.0
margin_top = 123.0
margin_right = -103.0
margin_bottom = -122.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicPlaySpeaker" type="AudioStreamPlayer" parent="MusicController/MusicUI"]
bus = "Music"

[node name="MainContains" type="VBoxContainer" parent="MusicController/MusicUI"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="MusicController/MusicUI/MainContains"]
margin_top = 288.0
margin_right = 1714.0
margin_bottom = 382.0
custom_fonts/font = ExtResource( 3 )
text = "Item 0"
items = [ "Item 0", null, false, 0, null ]
selected = 0

[node name="Label" type="HBoxContainer" parent="MusicController/MusicUI/MainContains"]
margin_top = 390.0
margin_right = 1714.0
margin_bottom = 472.0

[node name="Title" type="Label" parent="MusicController/MusicUI/MainContains/Label"]
margin_right = 1714.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 3 )
text = "Artist - Song"
align = 1
valign = 1

[node name="ControllingMusic" type="HBoxContainer" parent="MusicController/MusicUI/MainContains"]
margin_top = 480.0
margin_right = 1714.0
margin_bottom = 547.0
size_flags_horizontal = 3

[node name="Play" type="Button" parent="MusicController/MusicUI/MainContains/ControllingMusic"]
margin_right = 853.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
toggle_mode = true
text = "Play"

[node name="LoadSong" type="Button" parent="MusicController/MusicUI/MainContains/ControllingMusic"]
margin_left = 861.0
margin_right = 1714.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 6 )
text = "Load Song"

[node name="FileDialog" type="FileDialog" parent="MusicController/MusicUI"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -520.0
margin_top = -304.5
margin_right = 519.0
margin_bottom = 303.5
window_title = "Buka sebuah File"
mode = 0
access = 2
filters = PoolStringArray( "*.wav ; Microsoft Wave", "*.ogg; OGG Vorbis" )
show_hidden_files = true
current_dir = "C:/Users/ASUS/Documents/starring codes/Godot Projects/HexagonEngine"
current_path = "C:/Users/ASUS/Documents/starring codes/Godot Projects/HexagonEngine/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crackles" type="Node2D" parent="."]

[node name="Crackle" parent="Crackles" instance=ExtResource( 5 )]
position = Vector2( 1151.37, -3.09094 )

[node name="Crackle2" parent="Crackles" instance=ExtResource( 5 )]
position = Vector2( 103, 0 )

[node name="Crackle3" parent="Crackles" instance=ExtResource( 5 )]
position = Vector2( 1262.67, 0 )

[node name="Crackle4" parent="Crackles" instance=ExtResource( 5 )]
position = Vector2( 1371.32, 0 )

[node name="Crackle5" parent="Crackles" instance=ExtResource( 5 )]
position = Vector2( 1493.22, 0 )

[node name="Crackle6" parent="Crackles" instance=ExtResource( 5 )]
position = Vector2( 1617.78, -3.09094 )

[node name="Crackle7" parent="Crackles" instance=ExtResource( 5 )]
position = Vector2( 532.654, 0 )

[node name="Crackle8" parent="Crackles" instance=ExtResource( 5 )]
position = Vector2( 1737, -3.09094 )

[node name="Crackle9" parent="Crackles" instance=ExtResource( 5 )]
position = Vector2( 684.968, 0 )

[node name="Crackle10" parent="Crackles" instance=ExtResource( 5 )]
position = Vector2( 200, 0 )

[node name="Crackle11" parent="Crackles" instance=ExtResource( 5 )]
position = Vector2( 902.27, -3.09094 )

[node name="Crackle12" parent="Crackles" instance=ExtResource( 5 )]
position = Vector2( 1037.55, 0 )

[node name="Crackle13" parent="Crackles" instance=ExtResource( 5 )]
position = Vector2( 796.269, 0 )

[node name="Crackle14" parent="Crackles" instance=ExtResource( 5 )]
position = Vector2( 305, 0 )

[node name="Crackle15" parent="Crackles" instance=ExtResource( 5 )]
position = Vector2( 410, 0 )
[connection signal="finished" from="MusicController/MusicUI/MusicPlaySpeaker" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="pressed" from="MusicController/MusicUI/MainContains/ControllingMusic/Play" to="." method="_on_Play_pressed"]
[connection signal="toggled" from="MusicController/MusicUI/MainContains/ControllingMusic/Play" to="." method="_on_Play_toggled"]
[connection signal="pressed" from="MusicController/MusicUI/MainContains/ControllingMusic/LoadSong" to="." method="_on_LoadSong_pressed"]
[connection signal="file_selected" from="MusicController/MusicUI/FileDialog" to="." method="_on_FileDialog_file_selected"]
